# homework-29

EX1/: CMakeLists.txt  EX1.cpp
EX2/: CMakeLists.txt  EX2.cpp
