# CMakeList.txt: проект CMake для EX1; включите исходный код и определения,
# укажите здесь логику для конкретного проекта.
#
cmake_minimum_required (VERSION 3.8)

project ("EX1")

# Добавьте источник в исполняемый файл этого проекта.
add_executable (EX1 "EX1.cpp" )

# TODO: Добавьте тесты и целевые объекты, если это необходимо.
