# CMakeList.txt: проект CMake для EX2; включите исходный код и определения,
# укажите здесь логику для конкретного проекта.
#
cmake_minimum_required (VERSION 3.8)

project ("EX2")

# Добавьте источник в исполняемый файл этого проекта.
add_executable (EX2 "EX2.cpp" )

# TODO: Добавьте тесты и целевые объекты, если это необходимо.
